Pozole and meatloaf

--- a/recipes/pozole.html
+++ b/recipes/pozole.html
@@ -7,6 +7,29 @@
     </head>
     <body>
         <h1>Pozole Rojo</h1>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/d4/Pozole_rojo_%282017%29.jpg/330px-Pozole_rojo_%282017%29.jpg" width="300">
+        <br>
+        <h2>Description</h2>
+        <p>Pozole is a traditional soup made with nixtamalized white corn grains, to which meat, vegetables, spices and distinct hot peppers are added depending on the region. It is traditional in almost all of Mexico and Centralamerica.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li><b>Pork:</b> This recipe starts with a pound of boneless pork shoulder, a pound of boneless pork loin, and pork neck bones. The dish requires three different cuts of pork because It's important to have both lean and fatty cuts, according to recipe creator Consuelo Aguilar.</li>
+            <li><b>Water:</b> You’ll need just enough water to boil pork and chile sauce ingredients, plus two cups of water to blend with the chile sauce. </li>
+            <li><b>Garlic:</b> Cook a head of garlic with pork, then blend one clove of garlic in the chile sauce. </li>
+            <li><b>Seasonings:</b> Season pozole with salt, dried oregano, and ground cumin.</li>
+            <li><b>Tomato and guajillo chiles:</b> Make red chile sauce with a plum tomato and dried guajillo chiles.</li>
+            <li><b>Hominy:</b> For this pozole recipe, you’ll need two cans of drained white hominy. </li>
+            <li><b>Toppings:</b> Top pozole with lettuce or cabbage, a diced onion, and four quartered limes. </li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Boil, then simmer pork with garlic and salt until the meat is cooked through.</li>
+            <li>Boil tomatoes and chiles together. Drain.</li>
+            <li>Blend tomato and chiles with salt, garlic, oregano, cumin, and water.</li>
+            <li>Shred pork, then discard bones and garlic.</li>
+            <li>Stir sauce and pork into the pot, then simmer until flavors have melded.</li>
+            <li>Ladle pozole into bowls and finish each serving with toppings.</li>
+        </ol>
         <a href="../index.html">Home</a>
     </body>
 </html>
