--- a/recipes/meatloaf.html
+++ b/recipes/meatloaf.html
@@ -7,6 +7,28 @@
     </head>
     <body>
         <h1>Classic Meatloaf</h1>
+        <img src="https://www.allrecipes.com/thmb/-zPqvgtAkfQEa6bBDzcSK91tJrw=/0x512/filters:no_upscale():max_bytes(150000):strip_icc()/219171-classic-meatloaf-DDMFS-4x3-6b2d4a8c103146c1856eb0bf135bbffe.jpg" width="300">
+        <br>
+        <h2>Description</h2>
+        <p>Originating from American cuisine, the traditional meatloaf is a classic and comforting dish which has been a stable of the homely kitchen for generations. Meatloaf is prepared from minced meat, eggs, bread crumbs and a mix of spices.</p>
+        <h2>Ingredients</h2>
+        <ul>
+            <li>Ground chuck</li>
+            <li>Vegetables (carrot, celery, onion, bellpepper, mushrooms, garlic)</li>
+            <li>1 tablespoon Worcestershire Sauce</li>
+            <li>1 egg</li>
+            <li>Spices (dried Italian herbs, salt, pepper, and cayenne pepper)</li>
+            <li>Bread Crumbs</li>
+            <li>Glaze (made out of brown sugar, ketchup, Dijon mustard, and sriracha)</li>
+        </ul>
+        <h2>Steps</h2>
+        <ol>
+            <li>Chop the vegetables and combine them and the garlic in a food processor until nearly pureed.</li>
+            <li>Form the meatloaf by combining the vegetables, ground chuck, Worcestershire sauce, spices, and egg. Sprinkle in the bread crumbs and mix them with your hands (be careful not to overmix).</li>
+            <li>Form the meat mixture into a loaf and place it in a prepared baking pan. Bake for about 15 minutes.</li>
+            <li>After the 15 minutes, combine brown sugar, ketchup, Dijon, and sriracha to make the glaze. Spoon the glaze over the slightly hot meatloaf.</li>
+            <li>Return meatloaf to the oven and bake until the internal temperature reaches 160 degrees F (usually takes 60-75 minutes).</li>
+        </ol>
         <a href="../index.html">Home</a>
     </body>
 </html>
